mywebapp-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mywebapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mywebapp
  template:
    metadata:
      labels:
        app: mywebapp
    spec:
      containers:
        - image: varrthy/mywebapp:latest
          imagePullPolicy: IfNotPresent
          name: mywebapp
      restartPolicy: Always
