mywebapp-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mywebapp
spec:
  ports:
    - nodePort: 31280
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: mywebapp
  type: NodePort
